2011-02-19  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_fsgraph.php: Merged from trunk. Fixed html
	entities are displayed on graphs when time format contains them.

2011-02-19  Junichi Satoh  <junichi@rworks.jp>

	* godmode/agentes/configurar_agente.php: Fixed bad layout when
	length of agent name is more than 25.

2011-02-18 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* include/functions_db.php, operation/search_modules.php,
	operation/search_agents.php: sorry, I didn't think about the subgroups may
	have other subgroups (and this may be recursive), rewrite the SQL for
	search with groups, now the groups come from the PHP function to get
	all groups, children groups, grandchildren groups...

2011-02-18 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* include/functions_db.php, operation/search_modules.php,
	operation/search_agents.php: fixed SQL querys, this querys in previous
	version haven't lines SQL code for to search into subgroups.

2011-02-18 Javier Lanz <javier.lanz@artica.es>

	* operation/servers/view_server.php: Fixed ACL permissions
	* operation/servers/view_server_detail.php: Fixed ACL permissions
	* operation/menu.php: Let an "AR" user view 'Pandora servers' menu
	
	Fix: #3183477

2011-02-18 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* include/ajax/visual_console_builder.ajax.php,
	godmode/reporting/visual_console_builder.editor.js: fixed bug that erase the
	label of items when moving in other position.

2011-02-18 Javier Lanz <javier.lanz@artica.es>

	* godmode/gis_maps/configure_gis_map.php: Adding layer, group combo only
	displays user's groups.

2011-02-18 Javier Lanz <javier.lanz@artica.es>

	* godmode/gis_maps/configure_gis_map.php: Group combo now only displays
	user's groups.

2011-02-18 Sancho Lerena <slerena@artica.es>

	Merged bugfix from trunk.

	* operation/agentes/gis_view.php: Fixed ACL Problems in operation